# event-collector

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose-old.yml  proto_generate.sh  pyproject.toml  requirements.txt  serve.py  serve.sh
.github/workflows/: on_push.yml
api/: Makefile  api.py  app.py  kafka.py  main.py  playground_file.py  producer.py  proto_generate.sh  pyproject.toml  request.py  schemas.py  serve.sh  test_config.toml
api/events/: context_pb2.pyi  test_events_pb2.pyi
api/gen_protoc/events/: test_events_pb2.py
api/proto/events/: context.proto  test_events.proto
api/tests/: conftest.py  test_api.py
common/: logger.py  test_logger.py
config/: config.py  dev.toml  stg.toml
consumer/: Makefile  consumer.py  consumer_backup_1.py  consumer_backup_2.py  event_consumer.py  file_writers.py  serve.sh
consumer/file_writers/: base.py  minio.py
events/: context_pb2.py  context_pb2.pyi  test_events_pb2.py  test_events_pb2.pyi
events_registry/: events_registry.py  key_manager.py
local/: docker-compose.yml  init-kafka.sh
proto/events/: test_events.proto
serve/: serve_api.py  serve_consumer.py
tests/: conftest.py  test_api.py
tests/api/: conftest.py  test_api.py
tests/consumer/: conftest.py  test_consumer.py  test_file_writer.py
version/: __init__.py
