[tool.poetry]
name = "eventhub"
version = "0.1.0"
description = "System for events storage"
authors = ["Lara Simonova <lara@miro.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
mypy = "^1.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[mypy]
ignore_missing_imports = true

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.isort]
profile = "black"
