[tool.poetry]
name = "event-collector"
version = "0.1.0"
description = "Producer and consumer for handling events"
authors = ["Lara Simonova <lara@miro.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
httpx = "^0.25.1"
grpcio-tools = "^1.59.3"
webtest = "^3.0.0"
confluent-kafka = "^2.3.0"
types-protobuf = "^5.27.0.20240626"
minio = "^7.2.8"
gunicorn = "^23.0.0"
pydantic-settings = "^2.6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
flake8-pyproject = "^1.2.3"
pytest-minio-mock = "^0.4.16"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
exclude = ".venv"
per-file-ignores = "events/*" 

[tool.mypy]
ignore_missing_imports = true
exclude = "(.venv/*)"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '(.venv/*)'

[tool.isort]
profile = "black"