[tool.poetry]
name = "api"
version = "0.1.0"
description = "API for handling events"
authors = ["Lara Simonova <lara@miro.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
exclude = ".venv"

[tool.mypy]
ignore_missing_imports = true
exclude = "(.venv/*)"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '(.venv/*)'

[tool.isort]
profile = "black"